--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="checkBox4">Java</string>
     <string name="chooseSemText">Choose Semester</string>
     <string name="chooseLangText">Choose Language</string>
+    <string name="form">Login Form</string>
 </resources>
